--- a/code/client/index.html
+++ b/code/client/index.html
@@ -1,3 +1,8 @@
+<!-----------------------------------------------------------------------------
+index.html
+This is our main html file that renders the entire app 
+-------------------------------------------------------------------------------->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
